// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Capacity /> renders Capacity correctly 1`] = `
<DashboardCard
  className="kubevirt-capacity__card"
>
  <DashboardCardHeader
    className={null}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        lg={6}
        md={6}
        sm={6}
        xs={6}
      >
        <DashboardCardTitle
          className={null}
        >
          Capacity
        </DashboardCardTitle>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
      >
        <DashboardCardActionsBody>
          <Dropdown
            choices={
              Array [
                "Total Capacity",
                "Requested vs Used",
                "VMs vs Pods",
              ]
            }
            disabled={false}
            groupClassName="kubevirt-dropdown__group"
            id="capacity-type"
            isKebab={false}
            onChange={[Function]}
            value="Total Capacity"
            withTooltips={false}
          />
        </DashboardCardActionsBody>
      </Col>
    </Row>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <CapacityBody>
      <CapacityItem
        LoadingComponent={[Function]}
        formatValue={[Function]}
        id="capacity"
        isLoading={false}
        title="Total Capacity"
        total={11}
        used={5}
      />
    </CapacityBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Capacity /> renders Loading Capacity correctly 1`] = `
<DashboardCard
  className="kubevirt-capacity__card"
>
  <DashboardCardHeader
    className={null}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        lg={6}
        md={6}
        sm={6}
        xs={6}
      >
        <DashboardCardTitle
          className={null}
        >
          Capacity
        </DashboardCardTitle>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
      >
        <DashboardCardActionsBody>
          <Dropdown
            choices={
              Array [
                "Total Capacity",
                "Requested vs Used",
                "VMs vs Pods",
              ]
            }
            disabled={true}
            groupClassName="kubevirt-dropdown__group"
            id="capacity-type"
            isKebab={false}
            onChange={[Function]}
            value="Total Capacity"
            withTooltips={false}
          />
        </DashboardCardActionsBody>
      </Col>
    </Row>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <CapacityBody>
      <CapacityItem
        LoadingComponent={[Function]}
        formatValue={[Function]}
        id="capacity"
        isLoading={true}
        title="Total Capacity"
        total={null}
        used={null}
      />
    </CapacityBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Capacity /> renders correctly with Provider 1`] = `
<div
  class="card-pf kubevirt-dashboard__card kubevirt-capacity__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <div
      class="row"
    >
      <div
        class="col-lg-6 col-md-6 col-sm-6 col-xs-6"
      >
        <h2
          class="card-pf-title kubevirt-dashboard__card-title"
        >
          Capacity
        </h2>
      </div>
      <div
        class=""
      >
        <div
          class="kubevirt-dashboard__actions-body"
        >
          <div
            class="kubevirt-dropdown__group btn-group btn-group-justified"
          >
            <div
              class="pf-c-dropdown kubevirt-dropdown"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="pf-c-dropdown__toggle"
                id="pf-toggle-id-3"
                type="button"
              >
                <span
                  class="pf-c-dropdown__toggle-text"
                >
                  Total Capacity
                </span>
                <svg
                  aria-hidden="true"
                  class="pf-c-dropdown__toggle-icon"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align:-0.125em"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    transform=""
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="kubevirt-capacity__items"
    >
      <div
        class="kubevirt-capacity__item"
      >
        <div
          class="kubevirt-capacity__item-title"
        >
          Total Capacity
        </div>
        <h6
          class="kubevirt-capacity__item-description"
        >
          6 B available out of 11 B
        </h6>
        <div
          class="kubevirt-capacity__graph"
          id="donut-chart-capacity"
        >
          <svg
            viewBox="0 0 200 200"
          >
            <g>
              <path
                d="M1.0812807831283575,-91.99364560592235A92,92,0,0,1,26.815485394538648,88.00528247244755L24.29340400777449,79.36517196929044A83,83,0,0,0,1.0812807831283446,-82.99295651962302Z"
                role="presentation"
                shape-rendering="auto"
                style="fill:#06c;padding:8px;stroke:transparent;stroke-width:1"
                transform="translate(100, 100)"
              />
              <path
                d="M24.739558682351685,88.61125343996933A92,92,0,1,1,-1.0812807831282463,-91.99364560592235L-1.081280783128318,-82.99295651962302A83,83,0,1,0,22.217477295587553,79.97114293681221Z"
                role="presentation"
                shape-rendering="auto"
                style="fill:#8bc1f7;padding:8px;stroke:transparent;stroke-width:1"
                transform="translate(100, 100)"
              />
            </g>
            <text
              direction="inherit"
              dx="0"
              dy="8.875"
              x="100"
              y="88"
            >
              <tspan
                dx="0"
                style="font-size:25px;font-family:var(--pf-chart-global--FontFamily);letter-spacing:var(--pf-chart-global--letter-spacing);fill:#252525;stroke:transparent"
                text-anchor="middle"
                x="100"
              >
                45%
              </tspan>
            </text>
            <text
              direction="inherit"
              dx="0"
              dy="5.324999999999999"
              x="100"
              y="112"
            >
              <tspan
                dx="0"
                style="font-size:15px;font-family:var(--pf-chart-global--FontFamily);letter-spacing:var(--pf-chart-global--letter-spacing);fill:#252525;stroke:transparent"
                text-anchor="middle"
                x="100"
              >
                Used
              </tspan>
            </text>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
